# analog-garage-robotics-sw-challenge

./: .gitignore  README.md  build.sh  clean.sh  launch_mvsim.sh  launch_safety.sh
.devcontainer/: Dockerfile  devcontainer.json
docs/: node_interactions.md  node_parameters.md  speed_control_states.md  speed_limiter_states.md
speed-control/: CMakeLists.txt  package.xml
src/: CMakeCommon.txt  test.sh
src/estop_monitor/: CMakeLists.txt  package.xml
src/estop_monitor/src/: node_estop_monitor.cpp  node_estop_monitor.hpp
src/mvsim_controller/: package.xml  setup.cfg  setup.py
src/mvsim_controller/mvsim_controller/: node_mvsim_controller.py
src/proximity_sensor/: CMakeLists.txt  package.xml
src/proximity_sensor/src/: list_distance_source.cpp  list_distance_source.hpp  node_proximity_sensor.cpp  node_proximity_sensor.hpp
src/proximity_sensor/test/: test_list_distance_source.cpp
src/safety_system/: CMakeLists.txt  package.xml
src/safety_system/config/: visual_sim_params.yaml
src/safety_system/launch/: visual_sim_launch.py
src/safety_system/test/: test_integration.py
src/speed_limiter/: CMakeLists.txt  package.xml
src/speed_limiter/include/speed_limiter/: speed_limiter_states.hpp  state_publisher.hpp
src/speed_limiter/src/: i_publisher.hpp  node_speed_limiter.cpp  node_speed_limiter.hpp  speed_limiter_states.cpp  speed_limiter_states.hpp  speed_state_publisher.cpp  speed_state_publisher.hpp  state_publisher.hpp
src/speed_limiter/test/: test_estopped_state.cpp  test_full_speed_state.cpp  test_not_estopped_state.cpp  test_slow_state.cpp  test_stop_state.cpp
src/speed_limiter/test/mocks/: mock_publisher.hpp
src/state_machine/: CMakeLists.txt  package.xml
src/state_machine/include/state_machine/: i_state.hpp  state.hpp  state_machine.hpp
src/state_machine/test/: test_state_machine.cpp
src/state_machine/test/mocks/: mock_state.hpp
