<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>safety_system</name>
  <version>0.0.0</version>
  <description>Launch files, params, and integration tests for safety system</description>
  <maintainer email="nicholas.tantisujjatham@gmail.com">rosdev</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>estop_monitor</exec_depend>
  <exec_depend>proximity_sensor</exec_depend>
  <exec_depend>speed_limiter</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
